<resources>
    <string name="app_name">DigitalSignpostMobile</string>
    <string name="scan_sign">Scan Sign</string>
    <string name="digital_signpost_mobile">Digital Signpost Mobile</string>
    <string name="camera">camera</string>
    <string name="capture">Give me the Text</string>
    <string name="show_the_captured_image">show the captured image</string>
    <string name="save">Speichern</string>
    <string name="direction">Richtung</string>
    <string name="more">Mehr</string>
    <string name="label_signs">Wanderschilder</string>
    <string name="label_sign">Wanderschild</string>
    <!-- detailed signrow view -->
    <string name="rowNumber">Zeilenanzahl</string>
    <string name="beispieltext">Beispieltext</string>
    <string name="beispielnumber">0</string>
    <string name="resOrg">Organisationszeile</string>
    <string name="target">Target</string>
    <string name="duration">Duration</string>
    <string name="loeschen">Löschen</string>
    <string name="n_v">N/V</string>
    <string name="zeile_x">Zeile X</string>
    <string name="loaderText">Bitte warten...</string>
    <string name="empty" />
    <string name="found_x_signs">Es wurde X Wanderschilder detektiert!</string>
    <string name="anzeigen">Anzeigen</string>

    <string name="points_string">Zeile: %1$d</string>

</resources>
