<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foregroundGravity="right"
    android:id="@+id/linearLayoutRV">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/signImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:src="@mipmap/ic_launcher_round"
            android:layout_weight="0.3"
            android:contentDescription="@string/show_the_captured_image" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/beispieltext"
                />

            <!-- Direction -->

            <TextView
                android:id="@+id/imageCoordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direction"
                android:layout_marginStart="15dp"
                android:layout_below="@id/signTitle"/>

            <TextView
                android:id="@+id/directionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_v"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_alignParentEnd="true"
                android:layout_alignBaseline="@id/imageCoordinates"/>

            <!-- RowNumber -->

            <TextView
                android:id="@+id/rowNumberText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rowNumber"
                android:layout_marginStart="15dp"
                android:layout_below="@id/directionValue"/>


            <TextView
                android:id="@+id/rowNumberValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/n_v"
                android:layout_alignParentEnd="true"
                android:layout_alignBaseline="@id/rowNumberText"/>

            <!-- ResOrg -->

            <TextView
                android:id="@+id/resOrgText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resOrg"
                android:layout_marginStart="15dp"
                android:layout_below="@id/rowNumberValue"/>

            <TextView
                android:id="@+id/resOrgValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_v"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/rowNumberValue"/>

        </RelativeLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rowRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/detail_view_row_data"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loeschen"
        android:background="@drawable/signpost_button_brown"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"/>

</LinearLayout>